# ztf

./: .gitignore  Cargo.toml  README.md
contracts/: .env.example  foundry.toml  remappings.txt
contracts/misc/: gen_bytes_string.py
contracts/script/: Callback.goerli.s.sol  Callback.mantle.s.sol  ZTF.goerli.s.sol  ZTF.mantle.s.sol  ZTF.scroll.s.sol
contracts/src/: CallbackBase.sol  CrossChainCallbackBase.sol  FlagBase.sol  ICallback.sol  IFlag.sol  IRiscZeroVerifier.sol  ZTF.sol
contracts/src/groth16/: Groth16Verifier.sol  RiscZeroGroth16Verifier.sol
contracts/src/sample/: CallbackTarget.sol  JustInTime.sol  Merkledrop.sol  SecureFlag.sol  Sourcecode.sol  TheDAO.sol  TheDAOFlag.sol  TotallySecureContract.sol
contracts/test/: FlagBase.t.sol  TMP20.sol  ZTF.t.sol
frontend/: .env.example  next.config.js  package.json  tsconfig.json
frontend/src/components/Card/: BountyCard.tsx  EnvironmentCard.tsx  EnvironmentFlagCard.tsx  ExternalLinkCard.tsx  ValueCard.tsx
frontend/src/components/Input/: InputField.tsx
frontend/src/components/Section/: InfoSection.tsx
frontend/src/components/common/: Navbar.tsx  index.ts
frontend/src/constants/: Menu.ts  colors.ts  contracts.ts  currency.ts  mocks.ts  texts.ts  web3.ts
frontend/src/hooks/: useTransactionToast.tsx
frontend/src/interfaces/: bounty.ts
frontend/src/pages/: _app.tsx  about.tsx  claim.tsx  create.tsx
frontend/src/pages/bounty/: [id].tsx
frontend/src/stores/: usePrices.ts
frontend/src/themes/: Code.ts  index.ts
frontend/src/utils/: address.ts  ipfs.ts  json.ts  string.ts
frontend/src/views/pages/: AboutPage.tsx  BountyPage.tsx  ClaimPage.tsx  CreatePage.tsx  HomePage.tsx
host/: .env.example  Cargo.toml  sanity.env.json  sanity.txs.json
host/src/: main.rs
lib/: Cargo.toml
lib/src/: db.rs  lib.rs  secrets.rs
lib/src/secrets/: constants.rs
lib/src/types/: account.rs  environment.rs  mod.rs  receipt.rs  reciept.rs  secret.rs  target_condition.rs  tx_sim.rs
lib/src/utils/: mod.rs  snark.rs  state.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
