[workspace]
resolver = "2"
members = [
    "methods",
    "host",
    "lib",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
risc0-build = "0.18"
risc0-zkvm = { version = "0.18", default-features = false }
bonsai-sdk = "0.4.0"
