[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.18.0" }
lib = { path = "../lib", features = ["debug-secret", "utils"] }
ethers-core = { version = "=2.0.8", default-features = false }
serde = "1.0"
bonsai-sdk = "0.4.0"
hex = "0.4.3"
bincode = "1.3.3"
bytemuck = "1.14.0"
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"
