[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
revm = { version = "=3.5", default-features = false, features = ["std", "serde", "optional_no_base_fee", "optional_balance_check"] }
ethers-core = { version = "=2.0.8", default-features = false }
ethers-signers = { version = "=2.0.8", default-features = false }
once_cell = "1.18.0"
sha2 = { version = "=0.10.6", default-features = false }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
