[package]
name = "ztf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.18.0", default-features = false, features = ["std"] }
lib = { path = "../../lib" }

[patch.crates-io]
radium = { git = 'https://github.com/ferrilab/radium.git', rev = "723bed5" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"
